--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <title>Web app - Simple Interest Calculator</title>
     </head>
     <body>
         
