--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css">
     <title>Web app - Simple Interest Calculator</title>
     </head>
     <body>
